# Netlib

./: .gitignore  CMakeLists.txt  DataArrayDiagram.xml  Package.swift  README.md  build_debug.sh  build_release.sh
Netlib.xcodeproj/: project.pbxproj
Netlib.xcodeproj/project.xcworkspace/xcuserdata/edc.xcuserdatad/: UserInterfaceState.xcuserstate
Netlib.xcodeproj/xcshareddata/xcbaselines/OBJ_233.xcbaseline/: C6B5DEEC-2E20-4A81-B812-F34F7AB71A63.plist  Info.plist
Netlib.xcodeproj/xcshareddata/xcschemes/: Netlib.xcscheme  xcschememanagement.plist
Netlib.xcodeproj/xcuserdata/edc.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/CudaKernels/: compareEqual.cu  delayStream.cu  dropout.cu  expandLabels.cu  kernelUtilities.c  random.cu  softmaxLabelGradient.cu  updateGradient.cu  validateRange.cu
Sources/CudaKernels/include/: CudaKernels.h  module.modulemap
Sources/ImageCodecs/: jpeg.c  png.c
Sources/ImageCodecs/include/: ImageCodecs.h  module.modulemap
Sources/Netlib/: Accuracy.swift  Activation.swift  AnyConvertable.swift  AnyNumber.swift  AtomicCounter.swift  BatchNormalize.swift  BinarySerializable.swift  Codec.swift  ComputePlatform.swift  ComputeService.swift  Connector.swift  Convolution.swift  CpuComputeService.swift  CpuDevice.swift  CpuDeviceArray.swift  CpuStream.swift  Create.swift  CudaActivation.swift  CudaBatchNormalize.swift  CudaComputeService.swift  CudaConvolution.swift  CudaDevice.swift  CudaDeviceArray.swift  CudaDropout.swift  CudaFullyConnected.swift  CudaLrnCrossChannel.swift  CudaPooling.swift  CudaRngState.swift  CudaSoftmax.swift  CudaStream.swift  CudaStreamEvent.swift  DataArray.swift  DataCodec.swift  DataContainer.swift  DataLayout.swift  DataSource.swift  DataType.swift  DataView.swift  Database.swift  DbProvider.swift  (+48 more)
Sources/diagnosticExample/: main.swift
Sources/trainCodeModel/: main.swift
Sources/trainXmlModel/: main.swift
Sources/vgg16Example/: main.swift
Tests/: LinuxMain.swift
Tests/NetlibTests/: TestDataView.swift  TestDatabase.swift  TestFill.swift  TestGemm.swift  TestJson.swift  TestLog.swift  TestProperties.swift  TestProvider.swift  TestSetup.swift  TestStream.swift  TestXml.swift  checkDiff.swift
benchmarks/caffe2/: main.py
benchmarks/keras/: keras_benchmark.ipynb  keras_mnist.ipynb
benchmarks/tensorFlow/: main.py
docker/: Dockerfile
documents/: DataArrayDiagram.xml
modules/Cuda/: include_cuda.h  module.modulemap
modules/Jpeg/: include_jpeg.h  module.modulemap
modules/Lmdb/: include_lmdb.h  module.modulemap
modules/Png/: include_png.h  module.modulemap
modules/Zlib/: include_zlib.h  module.modulemap
samples/FCNAlexNet/: deploy.prototxt  original.prototxt  solver.prototxt  train_val.prototxt
samples/mnist/: mnistClassifier.xml  mnistClassifierSolver.xml
samples/unitTestModels/: folderLoadTest.xml  loadTest.xml  mnistClassifier.xml
samples/unitTestModels/mnistForward/: mnistForward.xml  mnistForwardSolver.xml
samples/unitTestModels/mnistInitialized/: mnistClassifier.xml  mnistClassifierSolver.xml
samples/vggnet/: train_val.prototxt  vgg16.xml  vgg16Solver.xml
